# task2

./: README.md
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/config/: controllers.yaml
src/arm_description/launch/: ros2_control.launch.py
src/arm_description/urdf/: arm.urdf.xacro  dual.urdf.xacro
src/dual_arm_control/: package.xml  setup.cfg  setup.py
src/dual_arm_control/dual_arm_control/: cartesian_jacobian_position_control.py
