<?xml version="1.0"?>
<package format="3">
  <name>arm_description</name>
  <version>0.0.1</version>

  <description>
    URDF and mesh files for the Fanuc CRX-10iA robot
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- THIS IS THE CRITICAL PART -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>